Improve UI; s/string/text/; create timestamp tokens; report header section as error; report incorrect settings

--- a/parser.html
+++ b/parser.html
@@ -1,7 +1,10 @@
-<script src=parser.js></script>
 <style>
- textarea { width:100%; height:50% }
+ body { font:80% Helvetica Neue, sans-serif }
+ h1 { font-size:1.2em }
+ textarea { width:100%; height:20em }
 </style>
+<h1>Live WebVTT Validator</h1>
+<script src=parser.js></script>
 <textarea oninput=test()>WEBVTT
 
 00:11.000 --> 00:13.000 D:vertical
