--- a/parser.html
+++ b/parser.html
@@ -1,7 +1,10 @@
+<!-- irony-free zone -->
+<!doctype html>
+<title>Live WebVTT Validator</title>
 <style>
  body { font:80% Helvetica Neue, sans-serif }
  h1 { font-size:1.2em }
- textarea { width:100%; height:20em }
+ textarea { width:100%; height:30em }
 </style>
 <h1>Live WebVTT Validator</h1>
 <script src=parser.js></script>
