--- a/parser.html
+++ b/parser.html
@@ -28,6 +28,7 @@
 </textarea>
 <p>You need JavaScript for this service.
 <ol></ol>
+<pre hidden></pre>
 <script>
   function test() {
     //var start = (new Date).getTime();
@@ -35,7 +36,8 @@
         r = pa.parse(document.getElementsByTagName("textarea")[0].value)
     //var diff = (new Date).getTime() - start;
     var ol = document.getElementsByTagName("ol")[0],
-        p = document.getElementsByTagName("p")[0]
+        p = document.getElementsByTagName("p")[0],
+        pre = document.getElementsByTagName("pre")[0]
     ol.textContent = ""
     if(r.errors.length > 0) {
       if(r.errors.length == 1)
@@ -57,6 +59,14 @@
       p.textContent = "This is boring, your WebVTT is valid!"
     }
     p.textContent += " (" + r.time + "ms)"
+    var s = new WebVTTSerializer()
+    pre.textContent = s.serialize(r.cues)
   }
   test()
+  function debug(url) {
+    var hmm = url.slice(url.indexOf("#")) == "#debug"
+    document.getElementsByTagName("pre")[0].hidden = hmm ? false : true
+  }
+  onhashchange = function(e) { debug(e.newURL) }
+  debug(location.href)
 </script>
