--- a/parser.html
+++ b/parser.html
@@ -11,7 +11,7 @@
 <script src=parser.js></script>
 <textarea oninput=test()>WEBVTT
 
-00:11.000 --> 00:13.000 D:vertical
+00:11.000 --> 00:13.000 vertical:rl
 <v Roger Bingham>We are in New York City
 
 00:13.000 --> 00:16.000
