--- a/parser.html
+++ b/parser.html
@@ -71,4 +71,4 @@
   onhashchange = function(e) { debug(e.newURL) }
   debug(location.href)
 </script>
-<p class=copyright><a href="https://bitbucket.org/annevk/webvtt">Source code</a> available under CC0.
+<p class=copyright><a href="https://github.com/annevk/webvtt">Source code</a> available under CC0.
