--- a/parser.html
+++ b/parser.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<meta charset=utf-8>
 <title>Live WebVTT Validator</title>
 <style>
  body { font:80% Helvetica Neue, sans-serif }
@@ -8,7 +9,7 @@
 </style>
 <h1>Live <a href="http://dev.w3.org/html5/webvtt/">WebVTT</a> Validator</h1>
 <script src=parser.js></script>
-<textarea oninput=test()>WEBVTT
+<p><textarea oninput=test()>WEBVTT
 
 00:11.000 --> 00:13.000 vertical:rl
 <v Roger Bingham>We are in New York City
@@ -26,15 +27,16 @@
 <v Roger Bingham>Astrophysicist, Director of the Hayden Planetarium
 
 </textarea>
-<p>You need JavaScript for this service.
+<p>Kind: <select id=kind onchange=test()><option>subtitles/captions/descriptions<option>metadata<option>chapters</select>
+<p id=status>You need JavaScript for this service.
 <ol></ol>
 <pre hidden></pre>
 <script>
   function test() {
     var pa = new WebVTTParser(),
-        r = pa.parse(document.getElementsByTagName("textarea")[0].value)
+        r = pa.parse(document.getElementsByTagName("textarea")[0].value, document.getElementById("kind").value)
     var ol = document.getElementsByTagName("ol")[0],
-        p = document.getElementsByTagName("p")[0],
+        p = document.getElementById("status"),
         pre = document.getElementsByTagName("pre")[0]
     ol.textContent = ""
     if(r.errors.length > 0) {
